Ball Generator and Renderer

--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -25,12 +25,6 @@
     <Filter Include="Source Files\Transform">
       <UniqueIdentifier>{42073ce4-ac92-4672-9e87-e43823d6603f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\RigidBody">
-      <UniqueIdentifier>{e2c4fe3f-7a32-4217-af50-16937fbc820d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\RigidBody">
-      <UniqueIdentifier>{e2a9d738-4dfd-4e7c-82d0-5396ae782ea3}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Renderer">
       <UniqueIdentifier>{86fa0297-2c69-4a4d-9383-04f79796fd2b}</UniqueIdentifier>
     </Filter>
@@ -42,6 +36,36 @@
     </Filter>
     <Filter Include="Header Files\Renderables">
       <UniqueIdentifier>{1c3da640-ebae-422a-937d-79dc267d345f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Physics">
+      <UniqueIdentifier>{e2c4fe3f-7a32-4217-af50-16937fbc820d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Physics">
+      <UniqueIdentifier>{e2a9d738-4dfd-4e7c-82d0-5396ae782ea3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Particle">
+      <UniqueIdentifier>{ad8d5604-8ebf-496d-bd63-bac555228552}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Particle">
+      <UniqueIdentifier>{bef807f6-7807-4c68-8edc-f48e40c7e70b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Behaviours">
+      <UniqueIdentifier>{fe3e54b6-bb43-4c9b-8cfa-d952ffdc7705}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Behaviours">
+      <UniqueIdentifier>{90336cd6-72ad-4ee2-aabc-0e73a3ff62e0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Behaviours\Spawn">
+      <UniqueIdentifier>{0a9eeac7-b707-43c6-abb3-a023e6e89c8f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Behaviours\Movement">
+      <UniqueIdentifier>{98638cf5-6fd9-4f61-bb97-1cf2f2cb0a0b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Behaviours\Spawn">
+      <UniqueIdentifier>{51344b24-6bfb-4704-91fb-4a73c52f1a3d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Behaviours\Movement">
+      <UniqueIdentifier>{f10dd952-4400-4dbf-80a7-cbbc5a6f3651}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -56,9 +80,6 @@
     </ClCompile>
     <ClCompile Include="Transform.cpp">
       <Filter>Source Files\Transform</Filter>
-    </ClCompile>
-    <ClCompile Include="Rigidbody.cpp">
-      <Filter>Source Files\RigidBody</Filter>
     </ClCompile>
     <ClCompile Include="DynamicEntity.cpp">
       <Filter>Source Files\Entity</Filter>
@@ -78,6 +99,36 @@
     <ClCompile Include="Sprite.cpp">
       <Filter>Source Files\Renderables</Filter>
     </ClCompile>
+    <ClCompile Include="Physics.cpp">
+      <Filter>Source Files\Physics</Filter>
+    </ClCompile>
+    <ClCompile Include="Particle.cpp">
+      <Filter>Source Files\Particle</Filter>
+    </ClCompile>
+    <ClCompile Include="BaseParticle.cpp">
+      <Filter>Source Files\Particle</Filter>
+    </ClCompile>
+    <ClCompile Include="Movement.cpp">
+      <Filter>Source Files\Behaviours\Movement</Filter>
+    </ClCompile>
+    <ClCompile Include="Spawn.cpp">
+      <Filter>Source Files\Behaviours\Spawn</Filter>
+    </ClCompile>
+    <ClCompile Include="ParticleDecorator.cpp">
+      <Filter>Source Files\Particle</Filter>
+    </ClCompile>
+    <ClCompile Include="SDLRenderer.cpp">
+      <Filter>Source Files\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="Shoot.cpp">
+      <Filter>Source Files\Behaviours\Movement</Filter>
+    </ClCompile>
+    <ClCompile Include="SingleSpawn.cpp">
+      <Filter>Source Files\Behaviours\Spawn</Filter>
+    </ClCompile>
+    <ClCompile Include="BallGenerator.cpp">
+      <Filter>Source Files\Particle</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Entity.h">
@@ -88,9 +139,6 @@
     </ClInclude>
     <ClInclude Include="Transform.h">
       <Filter>Header Files\Transform</Filter>
-    </ClInclude>
-    <ClInclude Include="Rigidbody.h">
-      <Filter>Header Files\RigidBody</Filter>
     </ClInclude>
     <ClInclude Include="DynamicEntity.h">
       <Filter>Header Files\Entity</Filter>
@@ -109,6 +157,36 @@
     </ClInclude>
     <ClInclude Include="Sprite.h">
       <Filter>Header Files\Renderables</Filter>
+    </ClInclude>
+    <ClInclude Include="Physics.h">
+      <Filter>Header Files\Physics</Filter>
+    </ClInclude>
+    <ClInclude Include="Particle.h">
+      <Filter>Header Files\Particle</Filter>
+    </ClInclude>
+    <ClInclude Include="Movement.h">
+      <Filter>Header Files\Behaviours\Movement</Filter>
+    </ClInclude>
+    <ClInclude Include="BaseParticle.h">
+      <Filter>Header Files\Particle</Filter>
+    </ClInclude>
+    <ClInclude Include="Spawn.h">
+      <Filter>Header Files\Behaviours\Spawn</Filter>
+    </ClInclude>
+    <ClInclude Include="ParticleDecorator.h">
+      <Filter>Header Files\Particle</Filter>
+    </ClInclude>
+    <ClInclude Include="SDLRenderer.h">
+      <Filter>Header Files\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="Shoot.h">
+      <Filter>Header Files\Behaviours\Movement</Filter>
+    </ClInclude>
+    <ClInclude Include="SingleSpawn.h">
+      <Filter>Header Files\Behaviours\Spawn</Filter>
+    </ClInclude>
+    <ClInclude Include="BallGenerator.h">
+      <Filter>Header Files\Particle</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
