--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -113,8 +113,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\dev\glew-2.0.0\lib;C:\dev\SDL2-2.0.5\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\dev\glew-2.0.0\lib\Release\x64;C:\dev\SDL2-2.0.5\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;glew32.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -155,11 +155,16 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\dev\glew-2.0.0\lib;C:\dev\SDL2-2.0.5\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\dev\glew-2.0.0\lib\Release\x64;C:\dev\SDL2-2.0.5\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;glew32.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BallGenerator.cpp" />
+    <ClCompile Include="BaseParticle.cpp" />
+    <ClCompile Include="Movement.cpp" />
+    <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="ParticleDecorator.cpp" />
     <ClCompile Include="Renderable.cpp" />
     <ClCompile Include="DynamicEntity.cpp" />
     <ClCompile Include="EmptyRenderable.cpp" />
@@ -167,19 +172,32 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="RenderableDecorator.cpp" />
     <ClCompile Include="Renderer.cpp" />
-    <ClCompile Include="Rigidbody.cpp" />
+    <ClCompile Include="Physics.cpp" />
+    <ClCompile Include="SDLRenderer.cpp" />
+    <ClCompile Include="Shoot.cpp" />
+    <ClCompile Include="SingleSpawn.cpp" />
+    <ClCompile Include="Spawn.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="StaticEntity.cpp" />
     <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BallGenerator.h" />
+    <ClInclude Include="BaseParticle.h" />
+    <ClInclude Include="Movement.h" />
+    <ClInclude Include="Particle.h" />
+    <ClInclude Include="ParticleDecorator.h" />
     <ClInclude Include="Renderable.h" />
     <ClInclude Include="DynamicEntity.h" />
     <ClInclude Include="EmptyRenderable.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="RenderableDecorator.h" />
     <ClInclude Include="Renderer.h" />
-    <ClInclude Include="Rigidbody.h" />
+    <ClInclude Include="Physics.h" />
+    <ClInclude Include="SDLRenderer.h" />
+    <ClInclude Include="Shoot.h" />
+    <ClInclude Include="SingleSpawn.h" />
+    <ClInclude Include="Spawn.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="StaticEntity.h" />
     <ClInclude Include="Transform.h" />
