--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="BallGenerator.cpp" />
     <ClCompile Include="BaseParticle.cpp" />
     <ClCompile Include="GLFWRenderer.cpp" />
+    <ClCompile Include="MeshGenerator.cpp" />
     <ClCompile Include="Movement.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="ParticleDecorator.cpp" />
@@ -183,12 +184,14 @@
     <ClCompile Include="Spawn.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="StaticEntity.cpp" />
+    <ClCompile Include="TextureGenerator.cpp" />
     <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BallGenerator.h" />
     <ClInclude Include="BaseParticle.h" />
     <ClInclude Include="GLFWRenderer.h" />
+    <ClInclude Include="MeshGenerator.h" />
     <ClInclude Include="Movement.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="ParticleDecorator.h" />
@@ -206,6 +209,7 @@
     <ClInclude Include="Spawn.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="StaticEntity.h" />
+    <ClInclude Include="TextureGenerator.h" />
     <ClInclude Include="Transform.h" />
   </ItemGroup>
   <ItemGroup>
