--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -164,6 +164,7 @@
   <ItemGroup>
     <ClCompile Include="BallGenerator.cpp" />
     <ClCompile Include="BaseParticle.cpp" />
+    <ClCompile Include="CircularSpawn.cpp" />
     <ClCompile Include="Clock.cpp" />
     <ClCompile Include="glfwWindow.cpp" />
     <ClCompile Include="MeshGenerator.cpp" />
@@ -195,6 +196,7 @@
   <ItemGroup>
     <ClInclude Include="BallGenerator.h" />
     <ClInclude Include="BaseParticle.h" />
+    <ClInclude Include="CircularSpawn.h" />
     <ClInclude Include="Clock.h" />
     <ClInclude Include="glfwWindow.h" />
     <ClInclude Include="MeshGenerator.h" />
