--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -186,6 +186,9 @@
     <ClCompile Include="Clock.cpp">
       <Filter>Source Files\Clock</Filter>
     </ClCompile>
+    <ClCompile Include="CircularSpawn.cpp">
+      <Filter>Source Files\Behaviours\Spawn</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Entity.h">
@@ -271,6 +274,9 @@
     </ClInclude>
     <ClInclude Include="Clock.h">
       <Filter>Header Files\Clock</Filter>
+    </ClInclude>
+    <ClInclude Include="CircularSpawn.h">
+      <Filter>Header Files\Behaviours\Spawn</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
