--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="BaseParticle.cpp" />
     <ClCompile Include="CircularSpawn.cpp" />
     <ClCompile Include="Clock.cpp" />
+    <ClCompile Include="ConeSpawn.cpp" />
     <ClCompile Include="glfwWindow.cpp" />
     <ClCompile Include="MeshGenerator.cpp" />
     <ClCompile Include="Movement.cpp" />
@@ -198,6 +199,7 @@
     <ClInclude Include="BaseParticle.h" />
     <ClInclude Include="CircularSpawn.h" />
     <ClInclude Include="Clock.h" />
+    <ClInclude Include="ConeSpawn.h" />
     <ClInclude Include="glfwWindow.h" />
     <ClInclude Include="MeshGenerator.h" />
     <ClInclude Include="Movement.h" />
