additional name changes

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -173,20 +173,16 @@
     <ClCompile Include="openGLHandler.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="ParticleDecorator.cpp" />
-    <ClCompile Include="Renderable.cpp" />
     <ClCompile Include="DynamicEntity.cpp" />
-    <ClCompile Include="EmptyRenderable.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="RenderableDecorator.cpp" />
     <ClCompile Include="GraphicsHandler.cpp" />
     <ClCompile Include="Physics.cpp" />
-    <ClCompile Include="RenderingStrategy.cpp" />
+    <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Shoot.cpp" />
     <ClCompile Include="SingleSpawn.cpp" />
     <ClCompile Include="Spawn.cpp" />
-    <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="SpriteRenderer.cpp" />
     <ClCompile Include="StaticEntity.cpp" />
     <ClCompile Include="TextureGenerator.cpp" />
@@ -206,19 +202,15 @@
     <ClInclude Include="openGLHandler.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="ParticleDecorator.h" />
-    <ClInclude Include="Renderable.h" />
     <ClInclude Include="DynamicEntity.h" />
-    <ClInclude Include="EmptyRenderable.h" />
     <ClInclude Include="Entity.h" />
-    <ClInclude Include="RenderableDecorator.h" />
     <ClInclude Include="GraphicsHandler.h" />
     <ClInclude Include="Physics.h" />
-    <ClInclude Include="RenderingStrategy.h" />
+    <ClInclude Include="Renderer.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Shoot.h" />
     <ClInclude Include="SingleSpawn.h" />
     <ClInclude Include="Spawn.h" />
-    <ClInclude Include="Sprite.h" />
     <ClInclude Include="SpriteRenderer.h" />
     <ClInclude Include="StaticEntity.h" />
     <ClInclude Include="TextureGenerator.h" />
