--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -123,18 +123,6 @@
     <ClCompile Include="DynamicEntity.cpp">
       <Filter>Source Files\Entity</Filter>
     </ClCompile>
-    <ClCompile Include="EmptyRenderable.cpp">
-      <Filter>Source Files\Renderables</Filter>
-    </ClCompile>
-    <ClCompile Include="Renderable.cpp">
-      <Filter>Source Files\Renderables</Filter>
-    </ClCompile>
-    <ClCompile Include="RenderableDecorator.cpp">
-      <Filter>Source Files\Renderables</Filter>
-    </ClCompile>
-    <ClCompile Include="Sprite.cpp">
-      <Filter>Source Files\Renderables</Filter>
-    </ClCompile>
     <ClCompile Include="Physics.cpp">
       <Filter>Source Files\Physics</Filter>
     </ClCompile>
@@ -174,9 +162,6 @@
     <ClCompile Include="SpriteRenderer.cpp">
       <Filter>Source Files\Behaviours\RenderingStrategy</Filter>
     </ClCompile>
-    <ClCompile Include="RenderingStrategy.cpp">
-      <Filter>Source Files\Behaviours\RenderingStrategy</Filter>
-    </ClCompile>
     <ClCompile Include="Window.cpp">
       <Filter>Source Files\Renderer</Filter>
     </ClCompile>
@@ -201,6 +186,9 @@
     <ClCompile Include="openGLHandler.cpp">
       <Filter>Source Files\OpenGL</Filter>
     </ClCompile>
+    <ClCompile Include="Renderer.cpp">
+      <Filter>Source Files\Behaviours\RenderingStrategy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Entity.h">
@@ -214,18 +202,6 @@
     </ClInclude>
     <ClInclude Include="DynamicEntity.h">
       <Filter>Header Files\Entity</Filter>
-    </ClInclude>
-    <ClInclude Include="EmptyRenderable.h">
-      <Filter>Header Files\Renderables</Filter>
-    </ClInclude>
-    <ClInclude Include="Renderable.h">
-      <Filter>Header Files\Renderables</Filter>
-    </ClInclude>
-    <ClInclude Include="RenderableDecorator.h">
-      <Filter>Header Files\Renderables</Filter>
-    </ClInclude>
-    <ClInclude Include="Sprite.h">
-      <Filter>Header Files\Renderables</Filter>
     </ClInclude>
     <ClInclude Include="Physics.h">
       <Filter>Header Files\Physics</Filter>
@@ -255,9 +231,6 @@
       <Filter>Header Files\Particle</Filter>
     </ClInclude>
     <ClInclude Include="SpriteRenderer.h">
-      <Filter>Header Files\Behaviours\RenderingStrategy</Filter>
-    </ClInclude>
-    <ClInclude Include="RenderingStrategy.h">
       <Filter>Header Files\Behaviours\RenderingStrategy</Filter>
     </ClInclude>
     <ClInclude Include="Window.h">
@@ -292,6 +265,9 @@
     </ClInclude>
     <ClInclude Include="openGLHandler.h">
       <Filter>Header Files\OpenGL\Handlers</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer.h">
+      <Filter>Header Files\Behaviours\RenderingStrategy</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
